--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Kolab-LDAP-Backend-dirservd
-version:      0.91
-version_from: dirservd.pm
+version:      1.01
+version_from: lib/Kolab/LDAP/Backend/dirservd.pm
 installdirs:  site
 requires:
 
